# backup

./: readme  testedpipelines.txt
fheree/: TestCase.csv  a.out  test-cases.py  test2.c  test8.c  testapp-copy.c  testcases.csv
final/gst-template/: meson.build
final/gst-template/gst-plugin/: meson.build
final/gst-template/gst-plugin/src/: -pthread  3q  a.out  gstdrawshapes.c  gstdrawshapes.h  helloworld  my_app.c  result.csv  test2.c  testcases.csv
gst-template/: meson.build
gst-template/gst-plugin/: meson.build
gst-template/gst-plugin/src/: gstmyfilter.c  gstmyfilter.h
my_filter_backups/: fair_prop_installed_some.c  my_filter_yuv.c  not_working_tries.c  prints_nv12_values.c  prop_installed.c  prop_installed_some.c  temp_switch.c
nice_backups/: squar_at_centre.c  square_best  temp
nice_backups/nice_backups/: circle.c  copy_coord_square.c  fill_triangle.c  line.c  rectangle.c  squar_at_centre.c  square.c  square_best  temp  triangle_best.c
src/: .my_app.c.swp  a.out  gstdrawshapes.c  helloworld  my_app.c  result.csv  testcases.csv
